Descripción de los cambios

--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
 
                 <div class="navigation">
                     <a href="index.html">Inicio</a>
-                    <a href="listado.html">Nosotros</a>
+                    <a href="listado.html">Personajes</a>
                     <a href="contacto.html">Contacto</a>
                 </div>
             </nav>
