--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
             </nav>
 </header>
 <main>
+<div class="container-fluid p-3 text-center">
+
+  <ul class="list-group">
+  <li class="list-group-item text-primary fw-bold">Fanpage de bloodborne</li>
+  <li class="list-group-item text-info">Informacion de personajes</li>
+  <li class="list-group-item text-info">Pagina de contacto</li>
+</ul>
+
+</div>
+
 
 </main>
 
