--- a/listado.html
+++ b/listado.html
@@ -27,7 +27,7 @@
   <div class="container-fluid p-3">
     <div class="row bg-white border rounded shadow m-3">
       <div class="col-12 text-center titulogrilla">
-        <div class="h4 pt-3">Personajes Bloodborne</div>
+        <h4 class="pt-3 titulogrilla">Personajes Bloodborne</h4>
       </div>
       <div class="col-12 col-md-6 col-lg-3">
         <div class="text-center">
