cambio datos personales

--- a/contacto.html
+++ b/contacto.html
@@ -47,7 +47,7 @@
           <!-- Enlace a Twitter con imagen -->
 <div class="text-primary mt-4 fw-bold text-white text-center">
   <p>Estoy muy activo en twitter</p>
-  <a href="https://twitter.com/DiegoVa24412175" target="_blank" rel="noopener noreferrer">
+  <a href="https://twitter.com/coquillo130286" target="_blank" rel="noopener noreferrer">
     <img src="images/coco.jpg" 
          alt="Seguime en Twitter" 
          width="60" 
@@ -55,8 +55,8 @@
          class="rounded shadow-sm hover-effect">
   </a>
   <p class="mt-2">
-    <a href="https://twitter.com/DiegoVa24412175" target="_blank" class="text-primary text-decoration-none text-white">
-      @DiegoVa24412175
+    <a href="https://twitter.com/coquillo130286" target="_blank" class="text-primary text-decoration-none text-white">
+      @MiTwitter
     </a>
   </p>
 </div>
