--- a/listado.html
+++ b/listado.html
@@ -16,9 +16,9 @@
                 <img src="images/blood.jpg" />
 
                 <div class="navigation">
-                    <a href="index.html">Inicio</a>
-                    <a href="listado.html">Personajes</a>
-                    <a href="contacto.html">Contacto</a>
+                    <a href="index.html" target="_parent">Inicio</a>
+                    <a href="listado.html" target="_parent">Personajes</a>
+                    <a href="contacto.html" target="_parent">Contacto</a>
                 </div>
             </nav>
 </header>
@@ -87,7 +87,9 @@
 </main>
 
 <footer>
-
+<div class="foot">
+  
+</div>    
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
