--- a/bloodborne/contacto.html
+++ b/bloodborne/contacto.html
@@ -16,7 +16,7 @@
                 <img src="images/blood.jpg" />
 
                 <div class="navigation">
-                    <a href="index.html" target="_parent">Inicio</a>
+                    <a href="inicio.html" target="_parent">Inicio</a>
                     <a href="listado.html" target="_parent">Personajes</a>
                     <a href="contacto.html" target="_parent">Contacto</a>
                 </div>
