Vinculos listado/inicio.html

--- a/listado/inicio.html
+++ b/listado/inicio.html
@@ -13,7 +13,7 @@
 
   <div class="container-fluid p-3 border">
     <header>
-  <a href="/index.html">INICIO</a>
+  <a href="../index.html">INICIO</a>
 </header>
       <div class="border rounded my-3 text-center py-2">
     <h1 class="text-center">Organizador de asistentes a un evento</h1>
