--- a/B_bloodborne.html
+++ b/B_bloodborne.html
@@ -16,7 +16,7 @@
                 <img src="images/blood.jpg" />
 
                 <div class="navigation">
-                    <a href="../index.html" target="_parent">Inicio</a>
+                    <a href="index.html" target="_parent">Inicio</a>
                     <a href="B_personajes.html" target="_parent">Personajes</a>
                     <a href="B_contacto.html" target="_parent">Contacto</a>
                 </div>
